<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="q6.trainticket.BookingActivity"
    tools:showIn="@layout/activity_booking">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fail_string"
        android:id="@+id/fail_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/fail_result"
        android:layout_alignTop="@+id/fail_label"
        android:layout_toEndOf="@+id/fail_label"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/captcha_string"
        android:id="@+id/captcha_label"
        android:layout_below="@+id/fail_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/captcha_image"
        android:layout_alignTop="@+id/captcha_label"
        android:layout_toEndOf="@+id/captcha_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/partition_string"
        android:id="@+id/partition_label"
        android:layout_below="@+id/captcha_image"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/decode_string"
        android:id="@+id/decode_label"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/console_string"
        android:id="@+id/console_label"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/decode_label"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/console_output"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:maxLines="15"
        android:layout_below="@+id/console_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp" />
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_below="@+id/partition_label"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/partition_image1"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/partition_image2"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/partition_image3"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/partition_image4"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/partition_image5"
            android:layout_weight="1" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/partition_image6"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/decode_result"
        android:layout_alignTop="@+id/decode_label"
        android:layout_toEndOf="@+id/decode_label"
        android:layout_marginLeft="10dp" />

</RelativeLayout>
